# EDBI

./: .gitignore
01 - Counting time and instructions/: arithmetic-progression.cpp  for-loop.cpp
02 - Asymptotic analysis/: is-number-on-array.cpp  which-is-the-lowest.cpp
03 - Selection and Insertion Sort/: CMakeLists.txt
03 - Selection and Insertion Sort/include/: array_util.h  sort.h  sort_util.h
03 - Selection and Insertion Sort/src/: main.cpp  sort.cpp
04 - Quick Sort/: CMakeLists.txt  README.md
04 - Quick Sort/include/: sort.h
04 - Quick Sort/src/: array_util.cpp  main.cpp  sort.cpp  sort_util.cpp
05 - Linked List/: LinkedList.hpp  LinkedListWithSortedInsert.hpp  main.cpp
Project 01 - Test Correctioner/: CMakeLists.txt  respostas.txt
Project 01 - Test Correctioner/include/: App.h  Candidate.h  Question.h  Sort.h  TestController.h  utils.h
Project 01 - Test Correctioner/src/: App.cpp  Candidate.cpp  Question.cpp  Sort.cpp  TestController.cpp  main.cpp  utils.cpp
Project 02 - Doubled Linked List, Stack and Queue/: CMakeLists.txt  instrucoes.txt
Project 02 - Doubled Linked List, Stack and Queue/include/: DoubledLinkedList.hpp  Queue.hpp  Stack.hpp
Project 02 - Doubled Linked List, Stack and Queue/src/: main.cpp
Project 03 - Spell Checker/: CMakeLists.txt  dicionario.txt
Project 03 - Spell Checker/include/: Word.h  levenshtein.h
Project 03 - Spell Checker/src/: Word.cpp  main.cpp
project template/: CMakeLists.txt  README.md
project template/include/: test_lib.h
project template/src/: main.cpp  test_lib.cpp
sort template/: CMakeLists.txt  README.md
sort template/include/: sort_util.h
sort template/src/: main.cpp
